--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -8,6 +8,7 @@
     <script src="{% static "dropzonejs/min/dropzone.min.js" %}" nonce="{{request.csp_nonce}}"></script>
     <script src="{% static "dropzonejs/min/dropzone-amd-module.min.js" %}" nonce="{{request.csp_nonce}}"></script>
     <script src="{% static "js/dropzone-client.js" %}" nonce="{{request.csp_nonce}}"></script>
+    <script src="{% static "js/comment-block.js" %}" nonce="{{request.csp_nonce}}"></script>
 {% endblock %}
 
 {% block css_extras %}
@@ -31,13 +32,13 @@
                             <p>Il existe 2 types d’EDD: EDD simplifié & EDD volumétrique</p>
                         </div>
 
-                        {% include "common/form/input_upload.html" with label="EDD volumétrique" form_input=form.edd_volumetrique form_input_files=form.edd_volumetrique_files object_name='programme' object_uuid=convention.programme.uuid textarea=True image_only=True file_list=convention.programme.edd_volumetrique_files.values %}
+                        {% include "common/form/input_upload.html" with label="EDD volumétrique" form_input=form.edd_volumetrique form_input_files=form.edd_volumetrique_files object_name='programme' object_uuid=convention.programme.uuid textarea=True image_only=True file_list=convention.programme.edd_volumetrique_files.values object_field="bailleur__edd_volumetrique" %}
 
-                        {% include "common/form/input_text.html" with form_input=form.mention_publication_edd_volumetrique label="Mention de publication de l'EDD volumétrique" %}
+                        {% include "common/form/input_text.html" with form_input=form.mention_publication_edd_volumetrique label="Mention de publication de l'EDD volumétrique" object_field="bailleur__mention_publication_edd_volumetrique" %}
 
-                        {% include "common/form/input_upload.html" with label="EDD classique" form_input=form.edd_classique form_input_files=form.edd_classique_files object_name='programme' object_uuid=convention.programme.uuid textarea=True image_only=True file_list=convention.programme.edd_classique_files.values %}
+                        {% include "common/form/input_upload.html" with label="EDD classique" form_input=form.edd_classique form_input_files=form.edd_classique_files object_name='programme' object_uuid=convention.programme.uuid textarea=True image_only=True file_list=convention.programme.edd_classique_files.values object_field="bailleur__edd_classique" %}
 
-                        {% include "common/form/input_text.html" with form_input=form.mention_publication_edd_classique label="Mention de publication de l'EDD classique" %}
+                        {% include "common/form/input_text.html" with form_input=form.mention_publication_edd_classique label="Mention de publication de l'EDD classique" object_field="bailleur__mention_publication_edd_classique" %}
 
                         <h4 class="fr-mb-1w">EDD Simplifié</h4>
 
@@ -116,54 +117,31 @@
                                         <th scope="col">Financement {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                         <th scope="col">Désignation {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                         <th scope="col">Type {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        {% if convention.statut != 'BROUILLON' %}
+                                            <th scope="col">Comments</th>
+                                        {% endif %}
                                     </tr>
                                 </thead>
                                 <tbody>
                                     {% for form in formset %}
                                         <tr>
                                             <td>
-                                                <select
-                                                    class="fr-select {% if form.financement.errors %}fr-select--error{% endif %}"
-                                                    id="{{form.financement.id_for_label}}"
-                                                    name="{{form.financement.html_name}}"
-                                                    {% if not editable %}disabled{% endif %}>
-                                                    <option value="" {% if not form.financement.value %}selected{% endif %} disabled hidden></option>
-                                                    {% for financement in financements %}
-                                                        <option value="{{financement.value}}"
-                                                            {% if financement.value  == form.financement.value %}selected{% endif %}>
-                                                            {{financement.label}}
-                                                        </option>
-                                                    {% endfor %}
-                                                </select>
-                                                {% for error in form.financement.errors %}
-                                                    <p id="select-error-desc-error" class="fr-error-text">
-                                                        {{ error }}
-                                                    </p>
-                                                {% endfor %}
+                                                {% include "common/form/select_enum.html" with form_input=form.financement enum=financements %}
                                             </td>
                                             <td>
                                                 {% include "common/form/input_text.html" with form_input=form.designation %}
                                             </td>
                                             <td>
-                                                <select
-                                                    class="fr-select {% if form.typologie.errors %}fr-select--error{% endif %}"
-                                                    id="{{form.typologie.id_for_label}}"
-                                                    name="{{form.typologie.html_name}}"
-                                                    {% if not editable %}disabled{% endif %}>
-                                                    <option value="" {% if not form.typologie.value %}selected{% endif %} disabled hidden></option>
-                                                    {% for typologie in typologies %}
-                                                        <option value="{{typologie.value}}"
-                                                            {% if typologie.value  == form.typologie.value %}selected{% endif %}>
-                                                            {{typologie.label}}
-                                                        </option>
-                                                    {% endfor %}
-                                                </select>
-                                                {% for error in form.typologie.errors %}
-                                                    <p id="select-error-desc-error" class="fr-error-text">
-                                                        {{ error }}
-                                                    </p>
-                                                {% endfor %}
+                                                {% include "common/form/select_enum.html" with form_input=form.typologie enum=typologies %}
                                             </td>
+                                            {% if convention.statut != 'BROUILLON' %}
+                                                {% with input_id="logement_edd_"|add:form.uuid.value object_field="logement_edd__"|add:form.uuid.value %}
+                                                    <td id="{{form.uuid.id_for_label}}_div">
+                                                        {% include "common/comment_icon.html" with form_input=form.uuid object_field=object_field comments=comments %}
+                                                        {% include "common/comment_dialog.html" with form_input=form.uuid convention=convention object_field=object_field comments=comments %}
+                                                    </td>
+                                                {% endwith %}
+                                            {% endif %}
                                         </tr>
                                     {% endfor %}
                                 </tbody>
