--- a/templates/conventions/logements.html
+++ b/templates/conventions/logements.html
@@ -1,6 +1,12 @@
 {% extends "layout/base.html" %}
 
+{% load static %}
+
 {% block page_title %}Logements - APiLos{% endblock%}
+
+{% block javascript_extras %}
+    <script src="{% static "js/comment-block.js" %}" nonce="{{request.csp_nonce}}"></script>
+{% endblock %}
 
 {% load static %}
 
@@ -48,6 +54,9 @@
                                         <th scope="col" class="col__width--120">Loyer maxinum en € par m² de surface utile {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                         <th scope="col" class="col__width--120">Coefficient propre au logement {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                         <th scope="col" class="col__width--120">Loyer maxinum du logement en € {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        {% if convention.statut != 'BROUILLON' %}
+                                            <th scope="col">Comments</th>
+                                        {% endif %}
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -62,24 +71,7 @@
                                                 {% include "common/form/input_text.html" with form_input=form.designation %}
                                             </td>
                                             <td>
-                                                <select
-                                                    class="fr-select {% if form.typologie.errors %}fr-select--error{% endif %}"
-                                                    id="{{form.typologie.id_for_label}}"
-                                                    name="{{form.typologie.html_name}}"
-                                                    {% if not editable %}disabled{% endif %}>
-                                                    <option value="" {% if not form.typologie.value %}selected{% endif %} disabled hidden></option>
-                                                    {% for typologie in typologies %}
-                                                        <option value="{{typologie.value}}"
-                                                            {% if typologie.value  == form.typologie.value %}selected{% endif %}>
-                                                            {{typologie.label}}
-                                                        </option>
-                                                    {% endfor %}
-                                                </select>
-                                                {% for error in form.typologie.errors %}
-                                                    <p id="select-error-desc-error" class="fr-error-text">
-                                                        {{ error }}
-                                                    </p>
-                                                {% endfor %}
+                                                {% include "common/form/select_enum.html" with form_input=form.typologie enum=typologies %}
                                             </td>
                                             <td id="lgt_sh">
                                                 {% include "common/form/input_number.html" with form_input=form.surface_habitable step="0.01" onchange="compute_total_value('sh')" %}
@@ -102,6 +94,14 @@
                                             <td id="lgt_loyer">
                                                 {% include "common/form/input_number.html" with form_input=form.loyer step="0.01" onchange="compute_total_value('loyer')" %}
                                             </td>
+                                            {% if convention.statut != 'BROUILLON' %}
+                                                {% with input_id="logement_"|add:form.uuid.value object_field="logement__"|add:form.uuid.value %}
+                                                    <td id="{{form.uuid.id_for_label}}_div">
+                                                        {% include "common/comment_icon.html" with form_input=form.uuid object_field=object_field comments=comments %}
+                                                        {% include "common/comment_dialog.html" with form_input=form.uuid convention=convention object_field=object_field comments=comments %}
+                                                    </td>
+                                                {% endwith %}
+                                            {% endif %}
                                         </tr>
                                     {% endfor %}
                                     <tr>
